name:                pgf2
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://www.grammaticalframework.org
license:             LGPL-3
--license-file:        LICENSE
author:              Krasimir Angelov, Inari
maintainer:          
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:     PGF2, SG
  other-modules:       PGF2.FFI, PGF2.Expr, PGF2.Type, SG.FFI
  build-depends:       base >=4.3, bytestring >=0.9,
                       containers, pretty
  -- hs-source-dirs:      
  default-language:    Haskell2010
  build-tools:         hsc2hs

  extra-libraries:     sg pgf gu
  cc-options:          -std=c99
  default-language:    Haskell2010
  c-sources:           utils.c

executable pgf-shell
  main-is:             pgf-shell.hs
  hs-source-dirs:      examples
  build-depends:       base, pgf2, containers, mtl, lifted-base
  default-language:    Haskell2010
  if impl(ghc>=7.0)
    ghc-options: -rtsopts
